# Notes

./: README.md  app.py  config.py  onenote.duckdb  pyproject.toml  requirements.txt  test.ipynb
script/: import.py  postgres_schema.sql
src/: database_utils_DRP.py
src/notes/: __main__.py
