[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
version = "0.1.0"
description = "Simple notes CLI prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.4",
    "pandas>=2.3",
    "streamlit>=1.51",
    "streamlit-aggrid>=1.2",
    "streamlit-quill>=0.0.3",
]

[project.scripts]
notes = "notes.__main__:main"
