[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notes"
version = "0.1.0"
description = "Simple notes CLI prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3",
    "streamlit>=1.48.1",
    "streamlit-aggrid>=1.2",
    "streamlit-quill>=0.0.3",
    "beautifulsoup4>=4.12",
]

[project.scripts]
notes = "notes.__main__:main"
